Bon update select text

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container pt-5">
       <div class="mb-3">
         <label for="textfirst" class="form-label">Nhập tiếng Việt:</label>
-        <input class="form-control" id="textfirst" />
+        <input class="form-control" id="textfirst" onclick="selectInputVN()" />
       </div>
       <div class="mb-3">
         <label for="textlast" class="form-label">Hex Text</label>
